cmake_minimum_required(VERSION 3.28)
project(C_Code C)

set(CMAKE_C_STANDARD 11)

add_executable(C_Code main.c)

ADD_SUBDIRECTORY(LinkList)
ADD_SUBDIRECTORY(FileDemo)
ADD_SUBDIRECTORY(TestBinary)
ADD_SUBDIRECTORY(DoubleLinkedList)
ADD_SUBDIRECTORY(Sort/PopSort)
ADD_SUBDIRECTORY(Sort/SelectSort)
ADD_SUBDIRECTORY(Sort/QuickSort)
ADD_SUBDIRECTORY(Search/BinarySearch)
ADD_SUBDIRECTORY(StringTest)
ADD_SUBDIRECTORY(Stack)
ADD_SUBDIRECTORY(DblStack)
ADD_SUBDIRECTORY(Search/DeepSearch)
ADD_SUBDIRECTORY(Queue)
ADD_SUBDIRECTORY(homework/homeWork1)
ADD_SUBDIRECTORY(homeWork/homeWork3)
ADD_SUBDIRECTORY(homeWork/homeWork4)
ADD_SUBDIRECTORY(homeWork/homeWork5)
ADD_SUBDIRECTORY(homeWork/homeWork6)
ADD_SUBDIRECTORY(homeWork/homeWork7)

ADD_SUBDIRECTORY(Queue/QueueLink)
ADD_SUBDIRECTORY(Search/WideSearch)
ADD_SUBDIRECTORY(Tree/demo1)
ADD_SUBDIRECTORY(Tree/TwoForkTree)
ADD_SUBDIRECTORY(Tree/BinarySearchTree)
ADD_SUBDIRECTORY(IO/TinyShell)
ADD_SUBDIRECTORY(homeWork/homeWork8)